# AutoML_DSNA

./: README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml  release_to_pypi.yml
